# SimpleCrosshair-v2

./: .gitignore  CMakeLists.txt  README.md  icon.rc  overlay.cpp
